apps/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  labels:
    app: demo-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: demo-app
